[gd_scene load_steps=5 format=3 uid="uid://cvqj68wdghlqe"]

[ext_resource type="Script" path="res://scripts/npc/NPC.gd" id="1_npc_script"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_collision"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_visual"]
radius = 0.4
height = 1.8

[sub_resource type="SphereShape3D" id="SphereShape3D_interaction"]
radius = 3.0

[node name="NPC" type="CharacterBody3D" groups=["npc"]]
collision_layer = 2
collision_mask = 1
script = ExtResource("1_npc_script")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_collision")

[node name="VisualMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_visual")

[node name="NameLabel3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0)
pixel_size = 0.005
billboard = 1
text = "NPC"
font_size = 32
outline_size = 8

[node name="QuestIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 2.6, 0)
visible = false
mesh = SubResource("CapsuleMesh_visual")

[node name="InteractionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
shape = SubResource("SphereShape3D_interaction")
