# ============================================================================
# NPC.gd - Non-Player Character
# ============================================================================
# Aldeano interactivo con di谩logos y misiones
# ============================================================================

extends CharacterBody3D
class_name NPC

# 
# SEALES
# 

## Emitida cuando el jugador interact煤a con el NPC
signal npc_interacted(npc: NPC)

# 
# PROPIEDADES EXPORTADAS
# 

## Tipo de NPC
@export var npc_type: NPCData.NPCType = NPCData.NPCType.VILLAGER_BASIC

## 驴El NPC se mueve?
@export var can_wander: bool = false

## Radio de movimiento (si puede moverse)
@export var wander_radius: float = 5.0

# 
# NODOS
# 

@onready var collision_shape: CollisionShape3D = $CollisionShape3D
@onready var visual_mesh: MeshInstance3D = $VisualMesh
@onready var interaction_area: Area3D = $InteractionArea
@onready var name_label_3d: Label3D = $NameLabel3D
@onready var quest_indicator: MeshInstance3D = $QuestIndicator

# 
# PROPIEDADES
# 

## Datos del NPC (desde NPCData)
var npc_data: Dictionary = {}

## Nombre del NPC
var npc_name: String = ""

## 驴El jugador est谩 cerca?
var player_in_range: bool = false

## Posici贸n inicial (para wander)
var spawn_position: Vector3 = Vector3.ZERO

## Timer para cambio de direcci贸n (wander)
var wander_timer: float = 0.0

## Direcci贸n actual de movimiento
var wander_direction: Vector3 = Vector3.ZERO

## Tiempo de espera entre movimientos
const WANDER_INTERVAL: float = 3.0

## Velocidad de movimiento
const MOVE_SPEED: float = 1.5

# 
# MTODOS GODOT
# 

func _ready() -> void:
	# Obtener datos del NPC
	npc_data = NPCData.get_npc_data(npc_type)
	npc_name = NPCData.get_npc_name(npc_type)

	# Configurar visual
	_setup_visual()

	# Configurar 谩rea de interacci贸n
	_setup_interaction_area()

	# Guardar posici贸n inicial
	spawn_position = global_position

	print(" NPC creado: ", npc_name, " en ", global_position)


func _physics_process(delta: float) -> void:
	# Movimiento de vagabundeo
	if can_wander and not player_in_range:
		_handle_wander(delta)

	# Aplicar gravedad
	if not is_on_floor():
		velocity.y -= 9.8 * delta

	move_and_slide()

	# Actualizar indicador de misi贸n
	_update_quest_indicator()

	# Hacer que el label mire siempre a la c谩mara
	if name_label_3d and GameManager.player:
		var camera_pos = GameManager.player.get_camera_position()
		name_label_3d.look_at(camera_pos, Vector3.UP)


func _input(event: InputEvent) -> void:
	# Interactuar con E cuando el jugador est谩 cerca
	if event.is_action_pressed("interact") and player_in_range:
		interact()


# 
# MTODOS PBLICOS
# 

## Interactuar con el NPC
func interact() -> void:
	print(" Interactuando con: ", npc_name)
	npc_interacted.emit(self)
	AudioManager.play_sfx(Enums.SoundType.UI_CLICK)


## Obtiene el saludo del NPC
func get_greeting() -> String:
	return NPCData.get_greeting(npc_type)


## Obtiene un di谩logo aleatorio
func get_dialogue() -> String:
	return NPCData.get_random_dialogue(npc_type)


## Obtiene las misiones del NPC
func get_quests() -> Array:
	return NPCData.get_npc_quests(npc_type)


## Verifica si el NPC tiene misiones disponibles
func has_available_quests() -> bool:
	var quests = get_quests()
	for quest_id in quests:
		if not QuestSystem.is_quest_completed(quest_id):
			return true
	return false


# 
# MTODOS PRIVADOS
# 

## Configura el visual del NPC
func _setup_visual() -> void:
	if not visual_mesh:
		return

	# Crear material con color del NPC
	var material = StandardMaterial3D.new()
	material.albedo_color = NPCData.get_npc_color(npc_type)
	material.emission_enabled = true
	material.emission = material.albedo_color * 0.3
	visual_mesh.material_override = material

	# Configurar label con nombre
	if name_label_3d:
		name_label_3d.text = npc_name
		name_label_3d.modulate = Color.WHITE
		name_label_3d.outline_modulate = Color.BLACK
		name_label_3d.outline_size = 4


## Configura el 谩rea de interacci贸n
func _setup_interaction_area() -> void:
	if not interaction_area:
		return

	interaction_area.body_entered.connect(_on_body_entered)
	interaction_area.body_exited.connect(_on_body_exited)


## Maneja el movimiento de vagabundeo
func _handle_wander(delta: float) -> void:
	wander_timer += delta

	# Cambiar direcci贸n cada X segundos
	if wander_timer >= WANDER_INTERVAL:
		wander_timer = 0.0
		_choose_new_wander_direction()

	# Mover en la direcci贸n actual
	if wander_direction != Vector3.ZERO:
		velocity.x = wander_direction.x * MOVE_SPEED
		velocity.z = wander_direction.z * MOVE_SPEED

		# Rotar hacia la direcci贸n de movimiento
		var look_direction = Vector3(wander_direction.x, 0, wander_direction.z)
		if look_direction.length() > 0.1:
			look_at(global_position + look_direction, Vector3.UP)


## Elige una nueva direcci贸n de vagabundeo
func _choose_new_wander_direction() -> void:
	# Verificar si est谩 muy lejos del spawn
	var distance_from_spawn = global_position.distance_to(spawn_position)

	if distance_from_spawn > wander_radius:
		# Volver hacia el spawn
		wander_direction = (spawn_position - global_position).normalized()
	else:
		# Direcci贸n aleatoria o quedarse quieto
		if randf() < 0.3:
			wander_direction = Vector3.ZERO  # Quedarse quieto
		else:
			var angle = randf() * TAU
			wander_direction = Vector3(cos(angle), 0, sin(angle)).normalized()


## Actualiza el indicador de misi贸n (! sobre la cabeza)
func _update_quest_indicator() -> void:
	if not quest_indicator:
		return

	# Mostrar si tiene misiones disponibles
	quest_indicator.visible = has_available_quests()

	# Hacer que mire siempre a la c谩mara
	if quest_indicator.visible and GameManager.player:
		var camera_pos = GameManager.player.get_camera_position()
		quest_indicator.look_at(camera_pos, Vector3.UP)


# 
# SEALES
# 

func _on_body_entered(body: Node3D) -> void:
	if body.is_in_group("player"):
		player_in_range = true
		print(" Jugador cerca de ", npc_name)


func _on_body_exited(body: Node3D) -> void:
	if body.is_in_group("player"):
		player_in_range = false
		print(" Jugador lejos de ", npc_name)
